# lib_wallet

./: .gitignore  CMakeLists.txt  lib_wallet.gyp
art/lottie/: ._chick.tgs  ._created.tgs  ._diamond.tgs  ._done.tgs  ._intro.tgs  ._lock.tgs  ._money.tgs  ._paper.tgs  ._test.tgs
qrc/: wallet.qrc
ui/: address_label.cpp  address_label.h  amount_label.cpp  amount_label.h  inline_diamond.cpp  inline_diamond.h  lottie_widget.cpp  lottie_widget.h  ton_word_input.cpp  ton_word_input.h  ton_word_suggestions.cpp  ton_word_suggestions.h
wallet/: wallet.style  wallet_change_passcode.cpp  wallet_change_passcode.h  wallet_common.cpp  wallet_common.h  wallet_confirm_transaction.cpp  wallet_confirm_transaction.h  wallet_cover.cpp  wallet_cover.h  wallet_create_invoice.cpp  wallet_create_invoice.h  wallet_delete.cpp  wallet_delete.h  wallet_empty_history.cpp  wallet_empty_history.h  wallet_enter_passcode.cpp  wallet_enter_passcode.h  wallet_export.cpp  wallet_export.h  wallet_history.cpp  wallet_history.h  wallet_info.cpp  wallet_info.h  wallet_intro.cpp  wallet_intro.h  wallet_invoice_qr.cpp  wallet_invoice_qr.h  wallet_log.cpp  wallet_log.h  wallet_pch.cpp  wallet_pch.h  wallet_phrases.cpp  wallet_phrases.h  wallet_receive_grams.cpp  wallet_receive_grams.h  wallet_send_grams.cpp  wallet_send_grams.h  wallet_sending_transaction.cpp  wallet_sending_transaction.h  wallet_settings.cpp  (+9 more)
wallet/create/: wallet_create_check.cpp  wallet_create_check.h  wallet_create_created.cpp  wallet_create_created.h  wallet_create_import.cpp  wallet_create_import.h  wallet_create_intro.cpp  wallet_create_intro.h  wallet_create_manager.cpp  wallet_create_manager.h  wallet_create_passcode.cpp  wallet_create_passcode.h  wallet_create_ready.cpp  wallet_create_ready.h  wallet_create_step.cpp  wallet_create_step.h  wallet_create_view.cpp  wallet_create_view.h
